RESOLVED FIXED36335
Hashchange event is no longer a simple event, needs to be its own interface
https://bugs.webkit.org/show_bug.cgi?id=36335
Summary Hashchange event is no longer a simple event, needs to be its own interface
Brady Eidson
Reported 2010-03-18 16:26:50 PDT
Spun off from https://bugs.webkit.org/show_bug.cgi?id=36201 The hashchange event is no longer a simple event, needs to be its own interface. It has two fields so it can be better utilized. http://www.whatwg.org/specs/web-apps/current-work/multipage/history.html#event-hashchange
Attachments
Patch (27.47 KB, patch)
2010-05-10 19:18 PDT, Steven Lai
beidson: review-
Patch (29.56 KB, patch)
2010-05-10 23:01 PDT, Steven Lai
no flags
Patch (28.19 KB, patch)
2010-05-10 23:53 PDT, Steven Lai
no flags
Patch (32.27 KB, patch)
2010-09-08 14:27 PDT, Mihai Parparita
no flags
Patch (32.72 KB, patch)
2010-09-08 22:20 PDT, Mihai Parparita
no flags
Patch (32.68 KB, patch)
2010-09-13 17:21 PDT, Mihai Parparita
no flags
Patch (33.32 KB, patch)
2010-09-20 17:01 PDT, Mihai Parparita
no flags
Brady Eidson
Comment 1 2010-03-18 16:27:21 PDT
Steven Lai
Comment 2 2010-05-10 19:18:18 PDT
Created attachment 55643 [details] Patch here, defined HashChangeEvent.newURL, HashChangeEvent.oldURL as strings this fix is for https://bugs.webkit.org/show_bug.cgi?id=38754 so that we don't have to rollback https://bugs.webkit.org/show_bug.cgi?id=36201
Early Warning System Bot
Comment 3 2010-05-10 19:30:44 PDT
Brady Eidson
Comment 4 2010-05-10 22:33:53 PDT
Comment on attachment 55643 [details] Patch Looks fine in code, but can't land without fixing the build breakage failures for other platforms. I'm wondering if maybe they need the JSHashChangeEvent.cpp added to their build? (I didn't actually look at the Qt failure that the bots caught)
Steven Lai
Comment 5 2010-05-10 23:01:47 PDT
Steven Lai
Comment 6 2010-05-10 23:53:37 PDT
Kent Tamura
Comment 7 2010-06-19 09:37:53 PDT
Comment on attachment 55671 [details] Patch Looks OK.
WebKit Commit Bot
Comment 8 2010-06-19 14:22:31 PDT
Comment on attachment 55671 [details] Patch Rejecting patch 55671 from commit-queue. Failed to run "[u'/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--reviewer', u'Kent Tamura', u'--force']" exit_code: 1 Last 500 characters of output: lobal-constructors-expected.txt Hunk #1 succeeded at 113 (offset 5 lines). patching file LayoutTests/fast/loader/stateobjects/document-destroyed-navigate-back-with-fragment-scroll.html Hunk #3 FAILED at 61. Hunk #4 succeeded at 83 (offset 11 lines). 1 out of 4 hunks FAILED -- saving rejects to file LayoutTests/fast/loader/stateobjects/document-destroyed-navigate-back-with-fragment-scroll.html.rej patching file LayoutTests/fast/loader/stateobjects/pushstate-with-fragment-urls-and-hashchange.html Full output: http://webkit-commit-queue.appspot.com/results/3342068
Brady Eidson
Comment 9 2010-06-19 18:21:27 PDT
Jeez, I didn't know there was a patch here. I'll notice when the updated one is posted, I promise. :)
Eric Seidel (no email)
Comment 10 2010-09-02 13:55:19 PDT
Looks like this can't land as is. Are there plans to update this patch?
Mihai Parparita
Comment 11 2010-09-08 13:10:12 PDT
(In reply to comment #10) > Looks like this can't land as is. Are there plans to update this patch? I'm working on resurrecting the patch.
Mihai Parparita
Comment 12 2010-09-08 14:27:48 PDT
Mihai Parparita
Comment 13 2010-09-08 14:30:31 PDT
(In reply to comment #9) > I'll notice when the updated one is posted, I promise. :) Brady, I'll hold you to this, but could you not actually flip the review bit till the EWS bots have had a chance to run? It looks like there were cross-platform troubles with past versions of this patch.
WebKit Review Bot
Comment 14 2010-09-08 17:27:34 PDT
Mihai Parparita
Comment 15 2010-09-08 22:20:52 PDT
Mihai Parparita
Comment 16 2010-09-08 22:22:20 PDT
New version of the patch should hopefully build with GTK (as of http://trac.webkit.org/changeset/63324 derived sources have to be listed in GNUmakefile.am).
Mihai Parparita
Comment 17 2010-09-09 16:41:05 PDT
New version of the patch seems to build on GTK (and other platforms). The Windows EWS bot rejected it because it couldn't apply the patch, but based on https://webkit-commit-queue.appspot.com/queue-status/win-ews it seems to do that a lot, so I'm not going to read too much into it. Brady, mind r+/cq+-ing this?
Brady Eidson
Comment 18 2010-09-13 11:20:53 PDT
(In reply to comment #17) > New version of the patch seems to build on GTK (and other platforms). The Windows EWS bot rejected it because it couldn't apply the patch, but based on https://webkit-commit-queue.appspot.com/queue-status/win-ews it seems to do that a lot, so I'm not going to read too much into it. > > Brady, mind r+/cq+-ing this? T'was on vacation till this morning, taking a look shortly.
WebKit Commit Bot
Comment 19 2010-09-13 15:30:47 PDT
Comment on attachment 66996 [details] Patch Rejecting patch 66996 from commit-queue. Failed to run "[u'/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--reviewer', u'Brady Eidson', u'--force']" exit_code: 1 Last 500 characters of output: 23018. 2 out of 7 hunks FAILED -- saving rejects to file WebCore/WebCore.xcodeproj/project.pbxproj.rej patching file WebCore/bindings/js/JSEventCustom.cpp patching file WebCore/bindings/v8/custom/V8EventCustom.cpp patching file WebCore/dom/Document.cpp Hunk #2 succeeded at 4622 (offset -31 lines). patching file WebCore/dom/Event.cpp patching file WebCore/dom/Event.h patching file WebCore/dom/HashChangeEvent.h patching file WebCore/dom/HashChangeEvent.idl patching file WebCore/page/DOMWindow.idl Full output: http://queues.webkit.org/results/3921439
Mihai Parparita
Comment 20 2010-09-13 17:21:01 PDT
Mihai Parparita
Comment 21 2010-09-13 17:22:50 PDT
I've uploaded a new version of the patch that should merge cleanly. Brady (or Darin), would you mind landing this for me, so that it doesn't have to sit in the commit queue for hours and risk getting a merge failure again?
Mihai Parparita
Comment 22 2010-09-20 17:01:14 PDT
Mihai Parparita
Comment 23 2010-09-20 17:03:24 PDT
Even newer version of the patch that should merge cleanly. I can land this myself now (got SVN access today) if I can get another r+.
Dimitri Glazkov (Google)
Comment 24 2010-09-20 17:12:27 PDT
Comment on attachment 68158 [details] Patch ok.
Mihai Parparita
Comment 25 2010-09-20 17:22:25 PDT
Comment on attachment 68158 [details] Patch Clearing flags on attachment: 68158 Committed r67898: <http://trac.webkit.org/changeset/67898>
Mihai Parparita
Comment 26 2010-09-20 17:22:32 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 27 2010-09-20 17:48:39 PDT
http://trac.webkit.org/changeset/67898 might have broken Qt Linux Release
Mihai Parparita
Comment 28 2010-09-20 17:50:18 PDT
(In reply to comment #27) > http://trac.webkit.org/changeset/67898 might have broken Qt Linux Release It broke Windows too (attempted to fix that with http://trac.webkit.org/changeset/67901). The Qt failures look like Qt expectations that need to be updated (they have their own expectations of the tests that this patch touched). I'll attempt to rebaseline.
Mihai Parparita
Comment 29 2010-09-20 18:41:40 PDT
(In reply to comment #28) > It broke Windows too (attempted to fix that with http://trac.webkit.org/changeset/67901). Windows build is fixed. > The Qt failures look like Qt expectations that need to be updated (they have their own expectations of the tests that this patch touched). I'll attempt to rebaseline. GTK and Qt are rebaselined with http://trac.webkit.org/changeset/67907. Windows may need a rebaseline too, but the bot is really behind.
Note You need to log in before you can comment on or make changes to this bug.