WebCore/dom/Event.cpp
@@ -172,6 +172,11 @@ bool Event::isBeforeLoadEvent() const
     return false;
 }
 
+bool Event::isHashChangeEvent() const
+{
+    return false;
+}
+
 #if ENABLE(SVG)
 bool Event::isSVGZoomEvent() const
 {
