WebCore/dom/Event.h
@@ -123,6 +123,7 @@ namespace WebCore {
         virtual bool isWebKitAnimationEvent() const;
         virtual bool isWebKitTransitionEvent() const;
         virtual bool isBeforeLoadEvent() const;
+        virtual bool isHashChangeEvent() const;
 #if ENABLE(SVG)
         virtual bool isSVGZoomEvent() const;
 #endif
